test/classes/delete-free/lifetimes/ref-escapes.good
ref-escapes.chpl:6: In function 'bad':
ref-escapes.chpl:8: error: Reference to scoped variable cannot be returned
ref-escapes.chpl:7: note: consider scope of x
ref-escapes.chpl:11: In function 'badder':
ref-escapes.chpl:12: error: Reference to scoped variable cannot be returned
ref-escapes.chpl:11: note: consider scope of x
ref-escapes.chpl:20: In function 'baddest':
ref-escapes.chpl:22: error: Reference to scoped variable cannot be returned
ref-escapes.chpl:21: note: consider scope of r
ref-escapes.chpl:25: In function 'nested_bad':
ref-escapes.chpl:30: error: Reference to scoped variable cannot be returned
ref-escapes.chpl:26: note: consider scope of x
ref-escapes.chpl:42: In function 'bad_two_args':
ref-escapes.chpl:43: error: Reference to scoped variable cannot be returned
ref-escapes.chpl:42: note: consider scope of x
ref-escapes.chpl:46: In function 'bad_record_arg':
ref-escapes.chpl:47: error: Reference to scoped variable cannot be returned
ref-escapes.chpl:46: note: consider scope of arg
ref-escapes.chpl:54: In function 'bad_return_return_record_arg':
ref-escapes.chpl:56: error: Reference to scoped variable cannot be returned
ref-escapes.chpl:55: note: consider scope of aa
ref-escapes.chpl:63: In function 'badBar1':
ref-escapes.chpl:65: error: Reference to scoped variable cannot be returned
ref-escapes.chpl:64: note: consider scope of y
ref-escapes.chpl:68: In function 'badBar2':
ref-escapes.chpl:70: error: Reference to scoped variable cannot be returned
ref-escapes.chpl:69: note: consider scope of y
ref-escapes.chpl:74: In method 'badBorrow1':
ref-escapes.chpl:75: error: Reference to scoped variable other cannot be returned
ref-escapes.chpl:74: note: consider scope of other
  ref-escapes.chpl:127: called as R.badBorrow1(other: R)
ref-escapes.chpl:78: In method 'badBorrow2':
ref-escapes.chpl:80: error: Reference to scoped variable tmp cannot be returned
ref-escapes.chpl:78: note: consider scope of other
  ref-escapes.chpl:128: called as R.badBorrow2(other: R)
